test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_default.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_default.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: expected integer values for `x : i64` but was "hello"
